Modify controllers, specs and tests
